# plone.formwidget.hcaptcha

./: .gitignore  .mrbob.ini  CHANGELOG.md  CHANGES.rst  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  base.cfg  buildout.cfg  develop.cfg  instance.yaml  plone-4.3.x.cfg  plone-5.0.x.cfg  plone-5.1.x.cfg  plone-5.2.x.cfg  pyproject.toml  requirements.txt  setup.py  travis.cfg  versions.cfg
.github/workflows/: ci.yml  tests.yaml
docs/: INSTALL.txt  LICENSE.txt
news/: +release.internal  10.feature  11.bugfix  13.bugfix  15.internal  17.breaking  17.feature  17.internal  19.feature  2.bugfix  30.breaking  4.bugfix  6.bugfix  8.feature  9.bugfix
scripts/: create_site.py
src/plone/formwidget/hcaptcha/: __init__.py  configure.zcml  controlpanel.py  i18n.py  interfaces.py  meta.zcml  nohcaptcha.py  supermodel.py  testing.py  upgrades.py  validator.py  view.py  widget.pt  widget.py
src/plone/formwidget/hcaptcha/demo/: configure.zcml  form.py
src/plone/formwidget/hcaptcha/locales/: plone.formwidget.hcaptcha.pot  update.sh
src/plone/formwidget/hcaptcha/locales/de/LC_MESSAGES/: plone.formwidget.hcaptcha.mo  plone.formwidget.hcaptcha.po
src/plone/formwidget/hcaptcha/locales/es/LC_MESSAGES/: plone.formwidget.hcaptcha.mo  plone.formwidget.hcaptcha.po
src/plone/formwidget/hcaptcha/locales/eu/LC_MESSAGES/: plone.formwidget.hcaptcha.mo  plone.formwidget.hcaptcha.po
src/plone/formwidget/hcaptcha/locales/nl/LC_MESSAGES/: plone.formwidget.hcaptcha.mo  plone.formwidget.hcaptcha.po
src/plone/formwidget/hcaptcha/locales/pt_BR/LC_MESSAGES/: plone.formwidget.hcaptcha.mo  plone.formwidget.hcaptcha.po
src/plone/formwidget/hcaptcha/profiles/default/: browserlayer.xml  controlpanel.xml  metadata.xml  registry.xml
src/plone/formwidget/hcaptcha/profiles/uninstall/: browserlayer.xml  controlpanel.xml  registry.xml
src/plone/formwidget/hcaptcha/restapi/: configure.zcml  controlpanel.py
src/plone/formwidget/hcaptcha/tests/: test_setup.py
tests/: conftest.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
